[project]
name = "gbp-fl"
dynamic = ["version"]
description = "pfl-inspired plugin for Gentoo Build Publisher"
authors = [
    {name = "Albert Hopkins", email = "marduk@letterboxes.org"},
]
dependencies = ["gbpcli>=2.4.1"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3+"}

[project.entry-points."gbp_fl.records"]
memory = "gbp_fl.records.memory"
django = "gbp_fl.records.django_orm"

[project.optional-dependencies]
server = [
    "gentoo-build-publisher @ git+https://github.com/enku/gentoo-build-publisher",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage[toml]>=7.6.10",
    "pylint>=3.3.3",
    "pylint-django>=2.6.1",
    "django-stubs[compatible-mypy]>=5.1.2",
    "typos>=1.29.4",
    "unittest-fixtures @ git+https://github.com/enku/unittest-fixtures.git",
    "isort>=5.13.2",
]

[tool.black]
skip-magic-trailing-comma = true

[tool.django-stubs]
django_settings_module = "settings"

[tool.mypy]
plugins =["mypy_django_plugin.main"]
exclude = ["/migrations/"]
files = ["src/gbp_fl"]
mypy_path = ["tests", "stubs"]
strict = true

[tool.pylint.master]
load-plugins = "pylint_django,pylint.extensions.bad_builtin"
django-settings-module = "settings"
init-hook = "import sys; sys.path.insert(0, 'tests')"
bad-functions = ["print"]
ignore = ["/migrations/"]

[tool.isort]
profile = "black"
line_length = 88

[tool.coverage.run]
branch = true
source = ["gbp_fl"]
omit = ["src/gbp_fl/migrations/*"]
