[project]
name = "gbp-fl"
dynamic = ["version"]
description = "pfl-inspired plugin for Gentoo Build Publisher"
authors = [
    {name = "Albert Hopkins", email = "marduk@letterboxes.org"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3+"}
dependencies = ["gbpcli>=2.4.1", "yarl>=1.18.3", "requests>=2.32.3", "rich>=13.9.4"]

[project.entry-points."gbp_fl.records"]
memory = "gbp_fl.records.memory"
django = "gbp_fl.records.django_orm"

[project.entry-points."gentoo_build_publisher.graphql_schema"]
gbp_fl = "gbp_fl.graphql"

[project.entry-points."gbpcli.subcommands"]
fl = "gbp_fl.cli"

[project.entry-points."gentoo_build_publisher.apps"]
gbp_fl = "gbp_fl:APP"


[project.optional-dependencies]
server = [
    "gentoo-build-publisher>=2.3.0",
    "ariadne>=0.26.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.black]
skip-magic-trailing-comma = true

[tool.django-stubs]
django_settings_module = "settings"

[tool.mypy]
plugins =["mypy_django_plugin.main"]
exclude = ["/migrations/"]
files = ["src/gbp_fl"]
mypy_path = ["tests", "stubs"]
strict = true

[tool.pylint.master]
load-plugins = "pylint_django,pylint.extensions.bad_builtin"
django-settings-module = "settings"
init-hook = "import sys; sys.path.insert(0, 'tests')"
bad-functions = ["print"]
ignore = ["/migrations/"]

[tool.isort]
profile = "black"
line_length = 88

[tool.coverage.run]
branch = true
source = ["gbp_fl"]
omit = ["src/gbp_fl/migrations/*"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage[toml]>=7.6.12",
    "pylint>=3.3.4",
    "pylint-django>=2.6.1",
    "gentoo-build-publisher @ git+https://github.com/enku/gentoo-build-publisher.git@master",
    "gbp-testkit @ git+https://github.com/enku/gbp-testkit.git@master",
    "gbp-ps>=1.4.0",
    "mypy>=1.15.0",
    "isort>=6.0.0",
]
